--- a/.github/workflows/webui.yaml
+++ b/.github/workflows/webui.yaml
@@ -18,7 +18,10 @@ jobs:
       - uses: jetli/wasm-pack-action@v0.4.0
         with:
           version: 'latest'
-
+      - uses: jetli/wasm-bindgen-action@v0.2.0
+        with:
+          # Optional version of wasm-bindgen to install(eg. '0.2.83', 'latest')
+          version: 'latest'
       - run: rustup update stable && rustup default stable
       - run: ./web/build.sh
       - name: Upload static files as artifact
