--- a/.github/workflows/webui.yaml
+++ b/.github/workflows/webui.yaml
@@ -22,7 +22,7 @@ jobs:
         with:
           # Optional version of wasm-bindgen to install(eg. '0.2.83', 'latest')
           version: 'latest'
-      - run: rustup update stable && rustup default stable
+      - run: rustup update 1.88.0 && rustup default 1.88.0
       - run: ./web/build.sh
       - name: Upload static files as artifact
         id: deployment
