--- a/.github/workflows/webui.yaml
+++ b/.github/workflows/webui.yaml
@@ -23,6 +23,7 @@ jobs:
           # Optional version of wasm-bindgen to install(eg. '0.2.83', 'latest')
           version: 'latest'
       - run: rustup update 1.88.0 && rustup default 1.88.0
+      - run: sudo apt install minify
       - run: ./web/build.sh
       - name: Upload static files as artifact
         id: deployment
