--- a/.github/workflows/webui.yaml
+++ b/.github/workflows/webui.yaml
@@ -33,6 +33,9 @@ jobs:
 
   # Deployment job
   deploy:
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate sourcek
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
